# offworld

./: .gitignore  Cargo.toml  LICENSE  build.gradle.kts  flake.nix  gradle.properties  settings.gradle.kts
docs/: genesis-rust.md
game/: Cargo.toml
game/src/: main.rs
genesis/core/: Cargo.toml
genesis/core/src/: combinators.rs  deposition.rs  environment.rs  erosion.rs  field.rs  fieldset.rs  generate.rs  geometry.rs  grid.rs  lib.rs  material.rs  noise.rs  rng.rs  selector.rs  world.rs
genesis/ffi/: Cargo.toml
genesis/ffi/src/: lib.rs
genesis/viz/: Cargo.toml
genesis/viz/examples/: noise.rs  terrain.rs
genesis/viz/src/: lib.rs  mesh.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
minecraft/: build.gradle.kts  gradle.properties  settings.gradle.kts
minecraft/content/: build.gradle.kts
minecraft/fabric/genesis/: build.gradle.kts
minecraft/fabric/menu/: build.gradle.kts
minecraft/fabric/tech/: build.gradle.kts
minecraft/genesis/: build.gradle.kts
minecraft/menu/: build.gradle.kts
minecraft/neoforge/genesis/: build.gradle.kts
minecraft/neoforge/menu/: build.gradle.kts
minecraft/neoforge/tech/: build.gradle.kts
minecraft/offworld/content/: build.gradle.kts
minecraft/offworld/fabric/menu/: build.gradle.kts
minecraft/offworld/fabric/tech/: build.gradle.kts
minecraft/offworld/menu/: build.gradle.kts
minecraft/offworld/neoforge/menu/: build.gradle.kts
minecraft/offworld/neoforge/tech/: build.gradle.kts
minecraft/offworld/tech/: build.gradle.kts
minecraft/tech/: build.gradle.kts
offworld/: build.gradle.kts
offworld-fabric/: build.gradle.kts
offworld-fabric/src/main/resources/: fabric.mod.json
offworld/src/main/kotlin/: Todo.kt
scripts/: harness.main.kts
(+44 files in other folders)
