[workspace]
resolver = "3"
members = [
    "genesis/core",
    "genesis/ffi",
    "genesis/viz",
    "game",
]

# Cargo owns genesis/* + game. Gradle owns minecraft/** and is invisible here —
# the two manifests ignore each other by explicit membership. See
# docs/genesis-rust.md §4.

[workspace.package]
edition = "2024"
version = "0.0.0"
rust-version = "1.85"

[workspace.dependencies]
genesis-core = { path = "genesis/core" }
genesis-viz = { path = "genesis/viz" }
